refactor: 使用实时处理替代插画缩略图